# llm-rag-example

./: .env.example  .gitignore  README.md  answer.py  embeddings.py  evaluator.py  hierarchical_answer.py  hierarchical_ingest.py  ingest.py  main.py  pyproject.toml  visualize.py
evaluation/: eval.py
